# data-encryption-and-deduplication

./: S1877050916002623.txt  data.db  start.py
cloud/: abc.txt  download.jfif
modules/: connect.py
modules/auth/: login.py
modules/hash/: verifyHash.py
rust_hash_module/: Cargo.toml  pyproject.toml
rust_hash_module/src/: encrypt.rs  hash.rs  lib.rs
test_data/text/: cipher.txt  cipher_decrypt_text.txt  number.txt  testotp.txt
windows/: HomeWindow.py  MainWindow.py  WelcomeWindow.py
windows/auth/: LoginWindow.py  RegisterWindow.py
windows/functions/: DownloadWindow.py  UploadWindow.py
