[package]
name = "rust_hash_module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_hash_module"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.3", features = ["extension-module"] }
blake3 = "1.5.0"
chksum-md5 = "0.0.0"
aes-gcm = "0.10.3"
rand = "0.8.5"
sha2 = "0.10.8"
